Fix modal overlapping by gallery

--- a/src/components/base-components/Gallery/Gallery.scss
+++ b/src/components/base-components/Gallery/Gallery.scss
@@ -1,5 +1,5 @@
 .gallery {
-  z-index: 2000;
+  z-index: 1;
   position: relative;
 
   width: 100%;
