--- a/src/components/base-components/Gallery/GalleryViewer/GalleryViewer.scss
+++ b/src/components/base-components/Gallery/GalleryViewer/GalleryViewer.scss
@@ -1,6 +1,6 @@
 .gallery-popup {
   position: fixed;
-  z-index: 2000;
+  z-index: 1;
   top: 0;
   left: 0;
 
