--- a/src/components/base-components/Modal/Modal.scss
+++ b/src/components/base-components/Modal/Modal.scss
@@ -3,7 +3,7 @@ body.modal-open {
 }
 
 .modal-overlay {
-  z-index: 1;
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 0;
@@ -15,7 +15,7 @@ body.modal-open {
 }
 
 .modal {
-  z-index: 1;
+  z-index: 1000;
   position: fixed;
   top: 50%;
   left: 50%;
